--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
+  "scripts": {   
+    "start": "node server.js",
+    "start_server": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
