--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.17.0",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
@@ -13,7 +14,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
-  "scripts": {   
+  "scripts": {
     "start": "node server.js",
     "start_server": "react-scripts start",
     "build": "react-scripts build",
